--- a/aman_landingpage.html
+++ b/aman_landingpage.html
@@ -37,12 +37,6 @@ a {
 
 /** global classes styling **/
 
-.container {
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto;
-}
-
 .btn {
   padding: 0 20px;
   height: 40px;
@@ -60,19 +54,20 @@ a {
 }
 
 header {
-  position: fixed;
+  position: sticky;
   top: 0;
-  min-height: 75px;
   padding: 0px 20px;
+  padding-top: 23px;
+  padding-bottom: 30px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #eee;
 }
 
 @media (max-width: 600px) {
   header {
     flex-wrap: wrap;
+    padding-bottom: 0px;
   }
 }
 
@@ -137,6 +132,7 @@ nav > ul {
   }
 }
 
+
 #hero {
   display: flex;
   flex-direction: column;
@@ -144,7 +140,7 @@ nav > ul {
   justify-content: center;
   text-align: center;
   height: 200px;
-  margin-top: 50px;
+  background-color: white;
 }
 
 #hero > h2 {
@@ -174,12 +170,26 @@ nav > ul {
 
 @media (max-width: 650px) {
   #hero {
-    margin-top: 120px;
+    margin-top: 20px;
   }
 }
 
 #features {
-  margin-top: 30px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 1.1rem;  
+  height: 380px;
+}
+#features::before{
+  position: absolute;
+  content: "";
+  height: 380px;
+  width: 100vw;
+  background-image: url('background-image.jfif');
+  opacity: 0.5;
+  z-index: -1;
+  left: 0px;
+  background-attachment: fixed;
 }
 
 #features .icon {
@@ -211,41 +221,48 @@ nav > ul {
     width: 100%;
     text-align: center;
     padding: 0;
-    height: 150px;
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 650px) {
   #features {
-    margin-top: 0;
+    margin-top: 0px;
+
   }
 }
 
 #how-it-works {
-  margin-top: 50px;
+  /* margin-top: 50px; */
   display: flex;
   justify-content: center;
+  background-color: white;
+  width: 100vw;
 }
 
 #how-it-works > iframe {
-  max-width: 560px;
+  max-width: 590px;
   width: 100%;
+  height: 550px;
+  padding: 70px 0px;
 }
 
 #pricing {
-  margin-top: 60px;
+  /* margin-top: 60px; */
   display: flex;
   flex-direction: row;
   justify-content: center;
+  left: 0px;
+  padding: 55px 0px;
 }
-
 .product {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: calc(100% / 3);
+  width: 380px;
   margin: 10px;
+  background-color: rgb(245, 245, 245);
   border: 1px solid #000;
   border-radius: 3px;
 }
@@ -296,9 +313,11 @@ nav > ul {
 }
 
 footer {
-  margin-top: 30px;
   background-color: #ddd;
   padding: 20px;
+  width: 100vw;
+  position: absolute;
+  left: 0px;
 }
 
 footer > ul {
